<resources>
    <string name="app_name">Parse</string>
    <string name="login_header">Login</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="input_email_username">Email/Username</string>
    <string name="register_now">Click to Register</string>
    <string name="login_button">LOGIN</string>
    <string name="register_here_header">Register</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="input_name">Name</string>
    <string name="input_username">Username</string>
    <string name="dialog_error_placeholder">Error Message</string>
    <string name="dialog_dismiss_positive_ok">OK</string>
    <string name="facebook_app_id">1725940584314538</string>
    <string name="register">REGISTER</string>
    <string name="sign_up_with_fb">Sign up using facebook</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
</resources>
