<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_header"
            android:textSize="30sp"
            app:fl_textColor="fl_main"/>

        <com.cengalabs.flatui.views.FlatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/flat_user_username"
            android:fontFamily="helvetica"
            android:hint="@string/input_email_username"
            android:imeOptions="actionNext"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            app:fl_fieldStyle="fl_box"/>

        <com.cengalabs.flatui.views.FlatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/flat_lock_password"
            android:fontFamily="helvetica"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:fl_fieldStyle="fl_box"/>


        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/loginButton"
            style="@android:style/MediaButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:enabled="true"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"/>

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:paddingRight="20dp"
            android:text="@string/register_now"
            app:fl_textColor="fl_main"
            />
    </LinearLayout>
</ScrollView>